--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,10 +5,14 @@
   <title><%= appname %></title>
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <!-- bower:css -->
+  <!-- endbower -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
 </head>
 <body>
   <h1>Welcome to <%= appname %> generator</h1>
+  <!-- bower:js -->
+  <!-- endbower -->
+  <script src="js/main.js"></script>
 </body>
 </html>
