Add sourcemaps,dev/prod build

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <!-- bower:css -->
   <!-- endbower -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <h1>Welcome to <%= appname %> generator</h1>
